--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -14,11 +14,17 @@ body {
 
 #div-filtros {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    height: 500px;
-    background-image: url('../images/lupa.png');
+    height: 600px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('../images/img-filtros.jpeg');
     background-size: cover;
     background-position: center;
+    color:white;
+    text-align: center;
+    padding-left: 10vw;
+    padding-right: 10vw;
+
 }
 
 header {
@@ -32,4 +38,36 @@ header {
 
 #titulo-principal {
     color: white;
+}
+
+#titulo {
+    font-size: 100px;
+    padding-top: 5vh;
+}
+#subtitulo {
+    font-size: 60px;
+    font-weight: 100;
+}
+
+#divfiltros {
+    background-color: white;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+    height: 100px;
+    width: 1200px;
+    padding: 50px;
+    margin-top:5vh;
+    border-radius: 30px;
+}
+
+#divfiltros * {
+    font-size: 20px;
+}
+
+.btn-danger {
+    border-radius: 30px;
+    padding-right: 20px;
+    padding-left: 20px;
 }
