--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -71,3 +71,11 @@ header {
     padding-right: 20px;
     padding-left: 20px;
 }
+
+a {
+    color:none !important
+}
+
+.row {
+    justify-content: center !important;
+}
