--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -62,6 +62,15 @@ header {
     font-weight: 100;
 }
 
+.subsubtitulo {
+    font-size: 40px;
+    color: #E81456;
+}
+
+.btn-success {
+    border-radius: 10px !important;
+}
+
 #divfiltros {
     background-color: white;
     justify-content: center;
